# Game_dev_template

./: CMakeLists.txt  clean.sh  compile  convention.md  foo.txt
assets/shader/: glow.fs  glow.vs  shader.fs  shader.vs
externalsrc/: glad.c  miniaudio.c
game/include/: file.h
game/include/gllayer/: shader.h
game/include/math/: linear_algebra.h
game/main/: miniplayer.c
game/src/: defer.c  file.c
game/src/gllayer/: shader.c
include/: container.h  defer.h  file.h  gmath.h  math_linear_algebra.h  shader.h
include/gllayer/: shader.h
include/math/: linear_algebra.h
main/include/: game.h
main/src/: game.c
miniplayer/: main.c
mod/include/: defer.h
mod/include/math/: linear_algebra.h
mod/include/misc/: type.h
mod/src/math/: linear_algebra.c
src/: defer.c  drawing.c  file.c  gmath.c  main.c  math_linear_algebra.c  shader.c
src/gllayer/: shader.c
src/math/: linear_algebra.c
